fix nav added z-index 99

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4183,14 +4183,15 @@ body {
   -ms-align-items: center;
   -o-align-items: center;
   align-items: center;
-  -ms-flex-align: center; }
-  /* line 8, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+  -ms-flex-align: center;
+  z-index: 99; }
+  /* line 9, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
   .main-navigation.main-navigation-fixed {
     position: fixed;
     top: 0px;
     width: -webkit-calc(60% - 30px);
     width: calc(60% - 30px); }
-  /* line 12, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+  /* line 13, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
   .main-navigation .menu-item:not(:first-child) {
     height: 40px;
     -webkit-box-flex: 1;
@@ -4226,10 +4227,10 @@ body {
     -o-align-items: center;
     align-items: center;
     -ms-flex-align: center; }
-  /* line 20, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+  /* line 21, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
   .main-navigation .menu-item:last-child {
     display: none; }
-  /* line 23, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+  /* line 24, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
   .main-navigation .menu-item:first-child {
     display: none;
     position: relative;
@@ -4253,22 +4254,22 @@ body {
     -o-align-items: center;
     align-items: center;
     -ms-flex-align: center; }
-    /* line 30, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+    /* line 31, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
     .main-navigation .menu-item:first-child i#nav-down {
       position: absolute;
       top: 30%;
       right: 3%; }
-    /* line 33, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+    /* line 34, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
     .main-navigation .menu-item:first-child i#nav-up {
       position: absolute;
       top: 30%;
       right: 3%;
       display: none; }
-  /* line 37, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+  /* line 38, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
   .main-navigation .sticky-alias {
     display: none;
     height: 10px; }
-  /* line 41, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+  /* line 42, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
   .main-navigation .menu-item-mobile {
     height: 40px;
     -webkit-box-flex: 1;
@@ -4306,7 +4307,7 @@ body {
     -ms-flex-align: center; }
 
 @media (max-width: 1116px) {
-  /* line 56, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+  /* line 57, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
   .main-navigation {
     -webkit-box-orient: vertical;
     -moz-box-orient: vertical;
@@ -4318,7 +4319,7 @@ body {
     -moz-flex-direction: column;
     flex-direction: column;
     -ms-flex-direction: column; }
-    /* line 59, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+    /* line 60, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
     .main-navigation .menu-item:first-child {
       display: -webkit-box;
       display: -moz-box;
@@ -4327,21 +4328,21 @@ body {
       display: -moz-flex;
       display: -ms-flexbox;
       display: flex; }
-    /* line 62, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+    /* line 63, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
     .main-navigation .menu-item:not(:first-child) {
       display: none;
       max-height: 0px; }
-    /* line 66, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+    /* line 67, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
     .main-navigation .menu-item:last-child {
       display: none; } }
 
 @media screen and (max-width: 600px) {
-  /* line 70, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+  /* line 71, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
   .main-navigation-fixed {
     width: 100% !important; } }
 
 @media (min-width: 1116px) {
-  /* line 74, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+  /* line 75, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
   .main-navigation {
     -webkit-box-orient: horizontal;
     -moz-box-orient: horizontal;
@@ -4353,10 +4354,10 @@ body {
     -moz-flex-direction: row;
     flex-direction: row;
     -ms-flex-direction: row; }
-    /* line 77, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+    /* line 78, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
     .main-navigation .menu-item:first-child {
       display: none; }
-    /* line 80, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+    /* line 81, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
     .main-navigation .menu-item:not(:first-child) {
       display: -webkit-box;
       display: -moz-box;
@@ -4365,7 +4366,7 @@ body {
       display: -moz-flex;
       display: -ms-flexbox;
       display: flex; }
-    /* line 83, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
+    /* line 84, D:/Github/code-institute-stream-1-project/src/styles/my-styles/layouts/_nav.sass */
     .main-navigation .menu-item:last-child {
       display: none; } }
 
