--- a/src/styles/my-styles/layouts/_nav.sass
+++ b/src/styles/my-styles/layouts/_nav.sass
@@ -4,6 +4,7 @@
 	+display(flex)
 	+justify-content(space-around)
 	+align-items(center)
+	z-index: 99
 
 	&.main-navigation-fixed
 		+position(fixed, 0px null null null)
